fixed bug with correct colour glow not showing - changed modulation to 361

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3517,7 +3517,6 @@ input[type="number"] {
 .arrow-rotated-container {
   width: 100%;
   height: 100%;
-  border: solid 1px blue;
   position: absolute;
   top: 0;
   left: 0;
